# Mini-CI-job-runner-sistem

./: CMakeLists.txt  readme.MD
include/: cycle_detect.h  graph.h  job.h  list_node.h  logger.h  parser.h  queue.h  report.h  scheduler.h  worker.h
mock_c_app/: server  tester
mock_python_app/: Dockerfile  app.py  test_app.py
src/: cycle_detect.c  graph.c  job.c  logger.c  main.c  parser.c  queue.c  report.c  scheduler.c  worker.c
test_pipelines/: pipeline_c.yaml  pipeline_python.yaml  pipeline_valid.yaml
tests/mock_apps/c/: Dockerfile  main.c  test_app.c
tests/pipelines/: pipeline_c.yaml  pipeline_cyclic.yaml  pipeline_fail_cascade.yaml  pipeline_python.yaml
